--- a/app/src/pages/block-detail/block-detail.scss
+++ b/app/src/pages/block-detail/block-detail.scss
@@ -3,4 +3,9 @@ page-block-detail {
   .allow-truncated-text {
     overflow: hidden;
   }
+  
+}
+
+.page-content, .list--summary{
+  color: #fff;
 }
