--- a/app/src/theme/variables.scss
+++ b/app/src/theme/variables.scss
@@ -20,7 +20,7 @@ $font-path: '../assets/fonts';
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  brand: #8dc429,
+  brand: #000,
   primary: #2fa4d7,
   secondary: #8dc429,
   danger: #f53d3d,
