--- a/app/src/app/app.scss
+++ b/app/src/app/app.scss
@@ -11,8 +11,27 @@ body {
   user-select: text;
 }
 
+.grid--table{
+  margin: 0;
+  padding: 0;
+  border:solid 1px #666;
+  color: #fff
+}
+
+.latest-blocks, .page-content h1 {
+  color: #fff
+}
+
 a {
   cursor: pointer;
+  color: #fff;
+  font-weight: bold;
+  text-decoration: underline
+}
+
+.content-md{
+  background: #333 !important;
+  color: #333
 }
 
 .ellipsis {
@@ -27,15 +46,31 @@ a {
   opacity: 0.7;
 }
 
+ion-spinner {
+  margin:0 auto;
+  * {
+    stroke: white !important;
+  }
+}
+
+.item-md{
+  background: #333;
+  color: #e2e2e2
+}
+
 .list--summary {
+  background: #000;
   ion-label {
-    color: #334;
+    color: #99a;
     font-weight: bold;
   }
 
   ion-item {
     color: #99a;
     font-size: 1.125rem;
+    background: #000;
+    width: 95%;;
+    margin-left: 15px;
     @media screen and (min-width: $desktop-min-width) {
       font-size: 1.4rem;
     }
@@ -43,7 +78,7 @@ a {
   }
 
   ion-note {
-    color: #99a;
+    color: #fff;
     max-width: 80%;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -59,19 +94,20 @@ a {
   }
 
   ion-row {
-    border-top: 1px solid #dde;
+    border-top: 1px solid #333;
 
     &:first-child {
-      background-color: #fff;
+      background-color: #666;
+      color: #fff;
       border-top: none;
     }
 
     &:nth-child(even) {
-      background-color: #f8f8f9;
+      background-color: #000;
     }
 
     &:last-child {
-      background-color: #fff;
+      background-color: #666;
     }
   }
 }
