--- a/app/src/components/head-nav/head-nav.html
+++ b/app/src/components/head-nav/head-nav.html
@@ -2,11 +2,12 @@
   <button ion-button menuToggle>
     <ion-icon name="menu"></ion-icon>
   </button>
-  <ion-title>{{title}}</ion-title>
+  <img src="assets/img/logo_white.png" />
   <ion-buttons end>
     <button ion-button (click)="changeCurrency($event)">
       <ion-icon name="logo-bitcoin" *ngIf="currency.currencySymbol !== 'USD'"></ion-icon>
-      <ion-icon name="logo-usd" *ngIf="currency.currencySymbol === 'USD'"></ion-icon>&nbsp;{{ currency.currencySymbol }}
+      <ion-icon name="logo-usd" *ngIf="currency.currencySymbol === 'USD'"></ion-icon>&nbsp;{{ currency.currencySymbol
+      }}
     </button>
     <button ion-button icon-only (click)="toggleSearch()">
       <ion-icon name="search"></ion-icon>
@@ -15,5 +16,6 @@
 </ion-navbar>
 
 <form (ngSubmit)="search($event)">
-  <ion-searchbar [hidden]="!showSearch" placeholder="{{ 'Search for block, transaction or address' }}" [(ngModel)]="q" name="search"></ion-searchbar>
+  <ion-searchbar [hidden]="!showSearch" placeholder="{{ 'Search for block, transaction or address' }}" [(ngModel)]="q"
+    name="search"></ion-searchbar>
 </form>
