--- a/public/src/css/common.css
+++ b/public/src/css/common.css
@@ -114,7 +114,7 @@ margin-left: 0;
 }
 
 .table-hover>tbody>tr:hover>td, .table-hover>tbody>tr:hover>th {
-  background-color: #F0F7E2;
+  background-color: #666;
 }
 .navbar { min-height: 64px; }
 .navbar-default .navbar-toggle { 
@@ -144,7 +144,7 @@ margin-left: 0;
 }
 
 .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>.active>a:hover {
-  background-color: #fff;
+  background-color: #222;
 }
 
 .navbar-form .form-group {
@@ -181,7 +181,7 @@ margin-left: 0;
 }
 
 .navbar-form .form-control {
-  background-color: #7CAD23;
+  background-color: #333;
   border-radius: 3px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
@@ -214,16 +214,26 @@ margin-left: 0;
 }
 
 #search { color: #fff; }
+.well {
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: #000 !important;
+  border: 1px solid #666 !important;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+}
 
 #search::-webkit-input-placeholder {
-  color: #BCDF7E;
+  color: #fff;
   font-family: 'Ubuntu', sans-serif;
   font-style: italic;
   font-weight: 100;
 }
 
 #search::-moz-placeholder {
-  color: #BCDF7E;
+  color: #fff;
   font-family: 'Ubuntu', sans-serif;
   font-weight: 100;
 }
@@ -248,10 +258,10 @@ margin-left: 0;
 .col-gray {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
-  background-color: #F4F4F4;
+  background-color: #000;
   border-radius: 5px;
   padding: 14px;
-  border: 1px solid #eee;
+  border: 0;
 }
 
 .col-gray-responsive {
@@ -285,7 +295,7 @@ margin-left: 0;
 
 .block-id {
   background-color: #000;
-  border: 3px solid #FFFFFF;
+  border: 0;
   margin: 0 auto;
   width: 165px;
   color: #fff;
@@ -319,12 +329,12 @@ margin-left: 0;
 .block-tx {
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
-  background-color: #F4F4F4;
+  background-color: #000;
   border-radius: 2px;
   margin: 20px 0 10px;
   overflow: hidden;
   padding: 15px;
-  border: 1px solid #eee;
+  border: 1px solid #666;
 }
 
 .btn {
@@ -332,7 +342,7 @@ margin-left: 0;
 }
 .btn-primary {
   background-color: #000000;
-  border: 2px solid #76AF0F;
+  border: 2px solid #fff;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active,
@@ -382,8 +392,8 @@ margin-left: 0;
 }
 
 .txvalues-default {
-  background-color: #EBEBEB;
-  color: #333;
+  background-color: #666;
+  color: #fff;
 }
 
 .txvalues-success {
@@ -391,7 +401,7 @@ margin-left: 0;
 }
 
 .txvalues-danger {
-  background-color: #AC0015;
+  background-color: #222;
 }
 
 .txvalues-normal {
@@ -444,13 +454,22 @@ margin-left: 0;
 }
 
 .line-bot {
-  border-bottom: 2px solid #EAEAEA;
+  border-bottom: 2px solid #666;
   padding: 0 0 10px 0;
 }
 .line-mid { padding: 15px;}
 .line-top {
-  border-top: 1px solid #EAEAEA;
+  border-top: 1px solid #666;
   padding: 15px 0 0 0;
+}
+a{
+  color: #fff !important;
+  text-decoration: none !important;
+  font-weight: bold !important;
+}
+.transaction-vin-vout{
+  background: #666;
+  border: #666;
 }
 
 /* Custom page CSS
@@ -590,7 +609,7 @@ margin-left: 0;
 }
 
 .page-header { margin-top: 0; }
-
+.panel{border:0}
 .panel { margin-bottom: 1em;}
 .panel-body {
   padding: 0.7em;
@@ -688,7 +707,7 @@ a.v_highlight_more {
 
 .secondary_navbar {
   width: 100%;
-  background: #fff;
+  background: #666;
   position: fixed;
   top: 64px;
   left: 0;
